<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_acerca"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jhonny.timecalculator.activity.AcercaActivity"
    tools:showIn="@layout/app_bar_acerca"
    android:background="@mipmap/fondo4_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/version_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:textColor="@color/color_font_light_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/variable_progreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/acer_textView3"
                    android:textColor="@color/color_font_dark_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/fecha_creacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    android:textColor="@color/color_font_light_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/variable_progreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/acer_textView5"
                    android:textColor="@color/color_font_dark_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/pais_creacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textColor="@color/color_font_light_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/pais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textColor="@color/color_font_dark_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/label_desarrollado_por"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textColor="@color/color_font_light_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <com.jhonny.timecalculator.component.CustomTextView1
                    android:text="@string/label_creador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/acer_textView7"
                    android:textColor="@color/color_font_dark_gray"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="130dp"
        android:gravity="center_horizontal"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/facebook"
                android:id="@+id/acer_imageView2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_height="100dp"
                app:srcCompat="@mipmap/mi_foto"
                android:id="@+id/imageView2"
                android:keepScreenOn="false"
                android:baselineAlignBottom="false"
                android:layout_width="135dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/google"
                android:id="@+id/acer_imageView3" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>